Corrected last edit column + readability fix for task list (I actually thought that I did that for 0.9.9.2 already...)
git-svn-id: https://flyspray.svn.sourceforge.net/svnroot/flyspray/branches/0.9.9@1264 2633ddf7-78cb-0310-bf30-a8c8deaca200

--- a/themes/Bluey/theme.css
+++ b/themes/Bluey/theme.css
@@ -516,6 +516,10 @@ div#tasklist {
 	background-color:#e6eef6;
 }
 
+div#tasklist del, div#tasklist a.closedtasklink {
+	text-decoration:none;
+}
+
 /* The table listing tasks on the main page */
 div#tasklist table {
 	clear:both;
